--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 1300px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -25,6 +25,23 @@
     color: #06a2de;
 }
 
+.container .progress-bar {
+    display: none;
+    width: 600px;
+    height: 30px;
+    border: 1px solid #d3c2c2ab;
+    border-radius: 12px;
+}
+
+.container .progress-bar .completed-part {
+    background-color: #0cbf13d1;
+    width: 0%;
+    height: 100%;
+    border-radius: 12px;
+    transition: width 0.3s ease;
+    margin: unset;
+}
+
 .container .questions-wrapper {
     flex-direction: column;
     gap: 30px;
@@ -33,7 +50,7 @@
 
 .container .questions-wrapper .question {
     text-align: center;
-    font-size: 25px;
+    font-size: 27px;
 }
 
 .container .questions-wrapper .answers-wrapper {
@@ -41,31 +58,69 @@
     flex-direction: column;
     align-items: center;
     align-content: center;
-    gap: 15px;
+    gap: 20px;
 }
 
 .container .questions-wrapper .answers-wrapper .answer-button {
     cursor: pointer;
     font-size: 25px;
-    border: 2px solid black;
+    border: 3px solid #06a2de;
+    background-color: white;
+    border-radius: 12px;
+    padding: 3px 6px;
 }
 
 .container .questions-wrapper .answers-wrapper .answer-button:hover {
-    outline: 3px solid #06a2de;
-    border: 2px solid #06a2de;
+    outline: 4px solid #06a2de;
+    border: 3px solid #06a2de;
+    box-shadow: 0 0 15px 3px rgb(6, 162, 222, 0.5);
+}
+
+.container .questions-wrapper .answers-wrapper .answer-button:focus {
+    outline: none;
+}
+
+.container .questions-wrapper .answers-wrapper .answer-button.correct {
+    border: 7px solid rgba(12, 191, 19, 0.82);
+    transition: border-color 0.3s ease;
+    box-shadow: 0 0 7px 3px rgba(12, 191, 19, 0.5);
+}
+
+.container .questions-wrapper .answers-wrapper .answer-button.incorrect {
+    border: 7px solid rgb(244, 10, 10);
+    transition: border-color 0.3s ease;
+    box-shadow: 0 0 7px 3px rgb(244, 10, 10, 0.5);
 }
 
 .container .questions-wrapper .answers-wrapper .answer-input {
     font-size: 20px;
-    border: 2px solid black;
+    border: 3px solid #06a2de;
+    border-radius: 7px;
 }
 
 .container .questions-wrapper .answers-wrapper .answer-input:focus {
-    outline: 3px solid #06a2de;
-    border: 2px solid #06a2de;
+    border: 5px solid rgb(6, 162, 222);
+    outline: none;
+    box-shadow: 0 0 15px 3px rgb(6, 162, 222, 0.5);
 }
 
-.container .questions-wrapper .results {
+.container .questions-wrapper .answers-wrapper .answer-input.correct {
+    border: 5px solid #0cbf13d1;
+    transition: border-color 0.3s ease;
+    box-shadow: 0 0 15px 3px rgba(12, 191, 19, 0.5);
+}
+
+.container .questions-wrapper .answers-wrapper .answer-input.incorrect {
+    border: 5px solid #f40a0a;
+    transition: border-color 0.3s ease;
+    box-shadow: 0 0 15px 3px rgb(244, 10, 10, 0.5);
+}
+
+.correct-hint {
+    font-size: 18px;
+}
+
+.container .results {
     display: none;
     font-size: 25px;
 }
@@ -79,6 +134,18 @@
 .container .button-wrapper .pushing-button {
     cursor: pointer;
     font-size: 25px;
+    border-radius: 15px;
+    padding: 10px;
+    border: 6px solid #06a2de;
+    color: #f78200;
+    font-weight: 500;
+    background-color: white;
+}
+
+.container .button-wrapper .pushing-button:hover {
+    outline: 4px solid #06a2de;
+    border: 4px solid rgb(6, 162, 222);
+    box-shadow: 0 0 15px 5px rgb(6, 162, 222, 0.7);
 }
 
 .container .button-wrapper .pushing-button.restart {
