--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -84,12 +84,14 @@
     border: 7px solid rgba(12, 191, 19, 0.82);
     transition: border-color 0.3s ease;
     box-shadow: 0 0 7px 3px rgba(12, 191, 19, 0.5);
+    padding: 0px 3px;
 }
 
 .container .questions-wrapper .answers-wrapper .answer-button.incorrect {
     border: 7px solid rgb(244, 10, 10);
     transition: border-color 0.3s ease;
     box-shadow: 0 0 7px 3px rgb(244, 10, 10, 0.5);
+    padding: 0px 3px;
 }
 
 .container .questions-wrapper .answers-wrapper .answer-input {
@@ -123,6 +125,7 @@
 .container .results {
     display: none;
     font-size: 25px;
+    text-align: center;
 }
 
 .container .button-wrapper {
@@ -150,4 +153,182 @@
 
 .container .button-wrapper .pushing-button.restart {
     display: none;
+}
+
+@media screen and (max-width:750px) {
+    .container .heading {
+        font-size: 35px;
+    }
+
+    .container .progress-bar {
+        width: 400px;
+        height: 25px;
+    }
+
+    .container .questions-wrapper .question {
+        font-size: 22px;
+        margin: 0 30px;
+    }
+
+    .container .questions-wrapper .answers-wrapper {
+        gap: 18px;
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button {
+        font-size: 21px;
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button:hover {
+        outline: 2px solid #06a2de;
+        border: 3px solid #06a2de;
+        box-shadow: 0 0 7px 2px rgb(6, 162, 222, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button:focus {
+        outline: none;
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button.correct {
+        border: 5px solid rgba(12, 191, 19, 0.82);
+        transition: border-color 0.3s ease;
+        box-shadow: 0 0 7px 3px rgba(12, 191, 19, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button.incorrect {
+        border: 5px solid rgb(244, 10, 10);
+        transition: border-color 0.3s ease;
+        box-shadow: 0 0 7px 3px rgb(244, 10, 10, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-input {
+        font-size: 18px;
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-input:focus {
+        border: 4px solid rgb(6, 162, 222);
+        box-shadow: 0 0 7px 2px rgb(6, 162, 222, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-input.correct {
+        border: 4px solid #0cbf13d1;
+        box-shadow: 0 0 7px 2px rgba(12, 191, 19, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-input.incorrect {
+        border: 4px solid #f40a0a;
+        box-shadow: 0 0 7px 2px rgb(244, 10, 10, 0.5);
+    }
+
+    .correct-hint {
+        font-size: 15px;
+    }
+
+    .container .results {
+        font-size: 21px;
+        margin: 0 20px;
+    }
+
+    .container .button-wrapper .pushing-button {
+        font-size: 21px;
+        padding: 8px;
+    }
+
+    .container .button-wrapper .pushing-button:hover {
+        outline: 2px solid #06a2de;
+        border: 4px solid rgb(6, 162, 222);
+        box-shadow: 0 0 7px 3px rgb(6, 162, 222, 0.7);
+    }
+}
+
+@media screen and (max-width:500px) {
+    .container .heading {
+        font-size: 25px;
+    }
+
+    .container .progress-bar {
+        width: 250px;
+        height: 18px;
+    }
+
+    .container .questions-wrapper {
+        gap: 20px;
+    }
+
+    .container .questions-wrapper .question {
+        font-size: 15px;
+    }
+
+    .container .questions-wrapper .answers-wrapper {
+        gap: 12px;
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button {
+        font-size: 16px;
+        border-radius: 10px;
+        padding: 1px 3px;
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button:hover {
+        outline: 1px solid #06a2de;
+        border: 3px solid #06a2de;
+        box-shadow: 0 0 7px 2px rgb(6, 162, 222, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button:focus {
+        outline: none;
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button.correct {
+        border: 4px solid rgba(12, 191, 19, 0.82);
+        box-shadow: 0 0 5px 2px rgba(12, 191, 19, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-button.incorrect {
+        border: 4px solid rgb(244, 10, 10);
+        box-shadow: 0 0 5px 2px rgb(244, 10, 10, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-input {
+        font-size: 15px;
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-input:focus {
+        border: 3px solid rgb(6, 162, 222);
+        box-shadow: 0 0 5px 2px rgb(6, 162, 222, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-input.correct {
+        border: 3px solid #0cbf13d1;
+        box-shadow: 0 0 5px 2px rgba(12, 191, 19, 0.5);
+    }
+
+    .container .questions-wrapper .answers-wrapper .answer-input.incorrect {
+        border: 3px solid #f40a0a;
+        box-shadow: 0 0 5px 2px rgb(244, 10, 10, 0.5);
+    }
+
+    .correct-hint {
+        font-size: 13px;
+    }
+
+    .container .results {
+        font-size: 16px;
+
+    }
+
+    .container .button-wrapper {
+        margin-top: 20px;
+    }
+
+    .container .button-wrapper .pushing-button {
+        font-size: 15px;
+        padding: 6px;
+        border: 5px solid #06a2de;
+    }
+
+    .container .button-wrapper .pushing-button:hover {
+        outline: 2px solid #06a2de;
+        border: 4px solid rgb(6, 162, 222);
+        box-shadow: 0 0 5px 2px rgb(6, 162, 222, 0.7);
+    }
 }
