--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -42,6 +42,11 @@
     margin: unset;
 }
 
+.container .timer {
+    display: none;
+    font-size: 20px;
+}
+
 .container .questions-wrapper {
     flex-direction: column;
     gap: 30px;
@@ -128,6 +133,12 @@
     text-align: center;
 }
 
+.container .best-results {
+    display: none;
+    font-size: 20px;
+    text-align: center;
+}
+
 .container .button-wrapper {
     display: flex;
     flex-direction: column;
@@ -163,6 +174,10 @@
     .container .progress-bar {
         width: 400px;
         height: 25px;
+    }
+
+    .container .timer {
+        font-size: 17px;
     }
 
     .container .questions-wrapper .question {
@@ -228,6 +243,11 @@
         margin: 0 20px;
     }
 
+    .container .best-results {
+        font-size: 16px;
+        margin: 0 20px;
+    }
+
     .container .button-wrapper .pushing-button {
         font-size: 21px;
         padding: 8px;
@@ -241,6 +261,10 @@
 }
 
 @media screen and (max-width:500px) {
+    .container {
+        gap: 20px;
+    }
+
     .container .heading {
         font-size: 25px;
     }
@@ -248,6 +272,10 @@
     .container .progress-bar {
         width: 250px;
         height: 18px;
+    }
+
+    .container .timer {
+        font-size: 13px;
     }
 
     .container .questions-wrapper {
@@ -313,7 +341,10 @@
 
     .container .results {
         font-size: 16px;
+    }
 
+    .container .best-results {
+        font-size: 11px;
     }
 
     .container .button-wrapper {
