--- a/quiz.css
+++ b/quiz.css
@@ -67,6 +67,7 @@
 }
 
 .container .questions-wrapper .answers-wrapper .answer-button {
+    all:unset;
     cursor: pointer;
     font-size: 25px;
     border: 3px solid #06a2de;
