--- a/quiz.css
+++ b/quiz.css
@@ -67,7 +67,7 @@
 }
 
 .container .questions-wrapper .answers-wrapper .answer-button {
-    all:unset;
+    all: unset;
     cursor: pointer;
     font-size: 25px;
     border: 3px solid #06a2de;
@@ -166,6 +166,12 @@
     display: none;
 }
 
+@media (hover: none) and (pointer: coarse) {
+    .container .questions-wrapper .answers-wrapper .answer-button:focus {
+        outline: none;
+    }
+}
+
 @media screen and (max-width:750px) {
     .container .heading {
         font-size: 35px;
@@ -191,12 +197,14 @@
 
     .container .questions-wrapper .answers-wrapper .answer-button {
         font-size: 21px;
+        -webkit-tap-highlight-color: transparent;
     }
 
     .container .questions-wrapper .answers-wrapper .answer-button:hover {
-        outline: 2px solid #06a2de;
+        /* outline: 2px solid #06a2de;
         border: 3px solid #06a2de;
-        box-shadow: 0 0 7px 2px rgb(6, 162, 222, 0.5);
+        box-shadow: 0 0 7px 2px rgb(6, 162, 222, 0.5); */
+        outline: none;
     }
 
     .container .questions-wrapper .answers-wrapper .answer-button:focus {
@@ -297,9 +305,10 @@
     }
 
     .container .questions-wrapper .answers-wrapper .answer-button:hover {
-        outline: 1px solid #06a2de;
+        /* outline: 1px solid #06a2de;
         border: 3px solid #06a2de;
-        box-shadow: 0 0 7px 2px rgb(6, 162, 222, 0.5);
+        box-shadow: 0 0 7px 2px rgb(6, 162, 222, 0.5); */
+        outline: none;
     }
 
     .container .questions-wrapper .answers-wrapper .answer-button:focus {
@@ -308,11 +317,13 @@
 
     .container .questions-wrapper .answers-wrapper .answer-button.correct {
         border: 4px solid rgba(12, 191, 19, 0.82);
+        transition: border-color 0.3s ease;
         box-shadow: 0 0 5px 2px rgba(12, 191, 19, 0.5);
     }
 
     .container .questions-wrapper .answers-wrapper .answer-button.incorrect {
         border: 4px solid rgb(244, 10, 10);
+        transition: border-color 0.3s ease;
         box-shadow: 0 0 5px 2px rgb(244, 10, 10, 0.5);
     }
 
